--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	background: #f2f2f2;
 	color: #444444;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size:100%;
 	line-height: 1.8;
 	text-shadow: 0 1px 0 #ffffff;
 	max-width: 73%;
@@ -218,7 +218,9 @@ h2{
 	Used to Print Resume
 */
 @media print {
-
+	body {
+		font-size:50%;
+	}
 	#main{
 		margin-top:-100px;
 		margin-top:-100px;
