--- a/style.css
+++ b/style.css
@@ -175,6 +175,20 @@ h2{
 
 
 @media(orientation:portrait){
+	body {
+		font-size:50%;
+	}
+	.mobile{
+		display:block;
+	}
+	.desktop{
+		display:none;
+	}
+
+	#name{
+		text-align:center;
+	}
+
 	#headerImg{
 		display:none;
 	}
@@ -204,6 +218,12 @@ h2{
 }
 
 @media(orientation:landscape){
+	.mobile{
+		display:none;
+	}
+	.desktop{
+		display:block;
+	}
 
 	#tagline{
 		display:block;
@@ -218,9 +238,7 @@ h2{
 	Used to Print Resume
 */
 @media print {
-	body {
-		font-size:50%;
-	}
+
 	#main{
 		margin-top:-100px;
 		margin-top:-100px;
