--- a/style.css
+++ b/style.css
@@ -61,6 +61,33 @@ a:hover {
 }
 
 
+#imgZoom{
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	background-color:rgba(33, 33, 33,.95);
+	width:100%;
+	height:100%;
+	vertical-align:middle;
+	text-align:center;
+}
+
+#imgZoom > p{
+	position:fixed;
+	top:-2vh;
+	right:25px;
+	z-index:100;
+	color:#ccc;
+	font-size:5vmax;
+}
+
+#imgZoom > img {
+	margin-top:10vh;
+	width:70vmin;
+	border-radius:10px;
+}
+
 #tagline{
 	text-align:center;
 }
@@ -145,7 +172,7 @@ h2{
   text-align:center;
 }
 
-.portfolio > div > img{
+.portfolio > div > span > img{
   width:80%;
   margin-left:10%;
   vertical-align:top;
@@ -210,6 +237,7 @@ h2{
 	}
 
 
+
 	.icon > img{
 		width:6vw;
 	}
@@ -269,6 +297,11 @@ h2{
 	#taglineMobile{
 		display:none;
 	}
+
+		#imgZoom > p{
+			top:-10vh;
+		}
+
 }
 
 /*
